Actualización de layouts y strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="fb_login_protocol_scheme">fb27231443833165575</string>
     <string name="facebook_client_token">0fc32f85765a50a32b91bafab138f944</string>
 
+    <style name="radius">
+        <item name="cornerSizeBottomRight">10dp </item>
+        <item name="cornerSizeBottomLeft">10dp </item>
+        <item name="cornerSizeTopLeft">10dp </item>
+        <item name="cornerSizeTopRight">10dp </item>
+    </style>
 </resources>
